-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 8.0.0
-
-
1c2ffde787 (qt-creator/qt-creator/8.0) 1c2ffde787 (qt-creator/qt-creator/9.0) 1c2ffde787 (qt-creator/qt-creator/master)
When deploying android apps in Release mode, qtcreator does not provide androiddeployqt with the "–release" argument.
This leads to androiddeployqt trying to find the .apk within the "debug" directory inside the build directory, which depending on user either does not exist or exists but contains an old, incorrect .apk.
This leads to either deploying to device failing or deploying an old debug version of the app apk.
Occurs after QTBUG-103281.
| For Gerrit Dashboard: QTCREATORBUG-28163 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 432260,7 | Android: set release flag when building and deploying apk | 8.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |